force-app/main/default/objects/SBQQ__Quote__c/fields/License_Billing_Terms__c.field-meta.xml
<CustomField>
    <fullName>License_Billing_Terms__c</fullName>
    <description>RUBX-1442 to store license billing terms</description>
    <label>License Billing Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Non Standard</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>