force-app/main/default/objects/SBQQ__Quote__c/fields/Maximum_Rate__c.field-meta.xml
<CustomField>
        <fullName>Maximum_Rate__c</fullName>
        <inlineHelpText>Use this when there&apos;s max increase should apply or we are applying fix increase rate - any value appear here will trigger approval rules</inlineHelpText>
        <label>Maximum Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </CustomField>