force-app/main/default/objects/SBQQ__Quote__c/fields/Migrated_Contract__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Migrated Contract</label>
    <type>Checkbox</type>
</CustomField>