force-app/main/default/objects/SBQQ__Quote__c/fields/Minimum_Rate__c.field-meta.xml
<CustomField>
        <fullName>Minimum_Rate__c</fullName>
        <inlineHelpText>Use this when there&apos;s minimum increase should apply or we are applying fix increase rate</inlineHelpText>
        <label>Minimum Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </CustomField>