force-app/main/default/objects/SBQQ__Quote__c/fields/No_CPI__c.field-meta.xml
<CustomField>
        <fullName>No_CPI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No CPI</label>
        <type>Checkbox</type>
    </CustomField>