force-app/main/default/objects/SBQQ__Quote__c/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <description>RUBX-99</description>
    <inlineHelpText>Pulled from the Opportunity lookup record</inlineHelpText>
    <label>Opportunity Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>