force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Split_Required__c.field-meta.xml
<CustomField>
        <fullName>Order_Split_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates whether order splitting is required or not.</description>
        <inlineHelpText>This field indicates whether order splitting is required or not.</inlineHelpText>
        <label>Order Split Required</label>
        <type>Checkbox</type>
    </CustomField>