force-app/main/default/objects/SBQQ__Quote__c/fields/Other_One_Time_Fees__c.field-meta.xml
<CustomField>
        <fullName>Other_One_Time_Fees__c</fullName>
        <inlineHelpText>&quot;HOSF ILHF x&quot;</inlineHelpText>
        <label>Other One-Time Fees</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </CustomField>