force-app/main/default/objects/SBQQ__Quote__c/fields/Override_Currency__c.field-meta.xml
<CustomField>
        <fullName>Override_Currency__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to override currency being set to USD on creation.</inlineHelpText>
        <label>Override Currency</label>
        <type>Checkbox</type>
    </CustomField>