force-app/main/default/objects/SBQQ__Quote__c/fields/Override_Non_Discountable_Services__c.field-meta.xml
<CustomField>
    <fullName>Override_Non_Discountable_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RUBX-1008 If checked, then discounts can be added to quote lines that are for Products that are marked as Non-Discountable.  This field can only be seen by SOSS Users.</description>
    <inlineHelpText>If checked, Non-Discountable services can have a discount added in the Quote Line Editor.  This is only available to SOSS users</inlineHelpText>
    <label>Override Non-Discountable Services</label>
    <type>Checkbox</type>
</CustomField>