force-app/main/default/objects/SBQQ__Quote__c/fields/Payment_Terms_Created__c.field-meta.xml
<CustomField>
        <fullName>Payment_Terms_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Terms Created</label>
        <type>Checkbox</type>
    </CustomField>