force-app/main/default/objects/SBQQ__Quote__c/fields/Perpetual__c.field-meta.xml
<CustomField>
        <fullName>Perpetual__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this check box to indicate if the deal is a perpetual term.</description>
        <inlineHelpText>Select this check box to indicate if the deal is a perpetual term.</inlineHelpText>
        <label>Perpetual</label>
        <type>Checkbox</type>
    </CustomField>