force-app/main/default/objects/SBQQ__Quote__c/fields/Phoenix_Bundle_Exists__c.field-meta.xml
<CustomField>
        <fullName>Phoenix_Bundle_Exists__c</fullName>
        <description>Data point used for the output doc that designates Contract Terms and Payment Terms</description>
        <inlineHelpText>Data point used for the output doc that designates Contract Terms and Payment Terms</inlineHelpText>
        <label>Phoenix Bundle Exists</label>
        <length>3</length>
        <type>Text</type>
    </CustomField>