force-app/main/default/objects/SBQQ__Quote__c/fields/Previous_Price_Per_Loan__c.field-meta.xml
<CustomField>
        <fullName>Previous_Price_Per_Loan__c</fullName>
        <label>Previous Price Per Loan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>