force-app/main/default/objects/SBQQ__Quote__c/fields/Price_Conversion_Rate__c.field-meta.xml
<CustomField>
        <fullName>Price_Conversion_Rate__c</fullName>
        <description>This field will store the rate used on the Currency Conversion object to calculate the correct currency amount</description>
        <inlineHelpText>This field will store the rate used on the Currency Conversion object to calculate the correct currency amount</inlineHelpText>
        <label>Price Conversion Rate</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </CustomField>