force-app/main/default/objects/SBQQ__Quote__c/fields/Price_Loan_Grow__c.field-meta.xml
<CustomField>
    <fullName>Price_Loan_Grow__c</fullName>
    <formula>IF(AND(New_Price_Per_Loan__c  &gt; 0, Previous_Price_Per_Loan__c &gt; 0),

(New_Price_Per_Loan__c -  Previous_Price_Per_Loan__c ) / Previous_Price_Per_Loan__c, 

NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(New_Price_Per_Loan__c -  Previous_Price_Per_Loan__c ) / Previous_Price_Per_Loan__c</inlineHelpText>
    <label>Price/Loan Grow</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>