force-app/main/default/objects/SBQQ__Quote__c/fields/Price_Rule_has_Fired__c.field-meta.xml
<CustomField>
        <fullName>Price_Rule_has_Fired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Price Rule has Fired?</label>
        <type>Checkbox</type>
    </CustomField>