force-app/main/default/objects/SBQQ__Quote__c/fields/Pricing_Country__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Country__c</fullName>
    <description>RUBX-99</description>
    <inlineHelpText>Pulled from the Opportunity lookup record</inlineHelpText>
    <label>Pricing Country</label>
    <length>60</length>
    <type>Text</type>
</CustomField>