force-app/main/default/objects/SBQQ__Quote__c/fields/Primary_Contact_Email__c.field-meta.xml
<CustomField>
        <fullName>Primary_Contact_Email__c</fullName>
        <formula>SBQQ__PrimaryContact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Email</label>
        <type>Text</type>
    </CustomField>