force-app/main/default/objects/SBQQ__Quote__c/fields/Primary_Contact_Id__c.field-meta.xml
<CustomField>
        <fullName>Primary_Contact_Id__c</fullName>
        <formula>SBQQ__PrimaryContact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Id</label>
        <type>Text</type>
    </CustomField>