force-app/main/default/objects/SBQQ__Quote__c/fields/Primary_Contact_Phone__c.field-meta.xml
<CustomField>
        <fullName>Primary_Contact_Phone__c</fullName>
        <formula>SBQQ__PrimaryContact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Phone</label>
        <type>Text</type>
    </CustomField>