force-app/main/default/objects/SBQQ__Quote__c/fields/Primary_Contact_Title__c.field-meta.xml
<CustomField>
        <fullName>Primary_Contact_Title__c</fullName>
        <formula>SBQQ__PrimaryContact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Title</label>
        <type>Text</type>
    </CustomField>