force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Status_Not_Draft_On_Creation__c.field-meta.xml
<CustomField>
        <fullName>Quote_Status_Not_Draft_On_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote Status Not &quot;Draft&quot; On Creation</label>
        <type>Checkbox</type>
    </CustomField>