force-app/main/default/objects/SBQQ__Quote__c/fields/Rebate_Payment_Term__c.field-meta.xml
<CustomField>
        <fullName>Rebate_Payment_Term__c</fullName>
        <label>Rebate Payment Term</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </CustomField>