force-app/main/default/objects/SBQQ__Quote__c/fields/Recurring_Payment_Holiday__c.field-meta.xml
<CustomField>
        <fullName>Recurring_Payment_Holiday__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Please enter the number in month(s) if the recurring payment (RLF or subscription revenue) is not starting on signing or delivery. For GPP this will be months after the standard commencement</description>
        <inlineHelpText>Please enter the number in month(s) if the recurring payment (RLF or subscription revenue) is not starting on signing or delivery. For GPP this will be months after the standard commencement</inlineHelpText>
        <label>Recurring Payment Holiday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>