force-app/main/default/objects/SBQQ__Quote__c/fields/Remaining_Contract_Amount__c.field-meta.xml
<CustomField>
        <fullName>Remaining_Contract_Amount__c</fullName>
        <description>Please enter the remaining amount to Bill as an Early Termination Fee for a full termination.</description>
        <inlineHelpText>Please enter the remaining amount to Bill as an Early Termination Fee for a full termination.</inlineHelpText>
        <label>Remaining Contract Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>