force-app/main/default/objects/SBQQ__Quote__c/fields/Request_Bypass_Approval__c.field-meta.xml
<CustomField>
        <fullName>Request_Bypass_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use this if the updated quote is better than the previous approved quote</description>
        <inlineHelpText>Use this if the updated quote is better than the previous approved quote</inlineHelpText>
        <label>Request Bypass Approval</label>
        <type>Checkbox</type>
    </CustomField>