force-app/main/default/objects/SBQQ__Quote__c/fields/Request_Bypass_Approval_Reason__c.field-meta.xml
<CustomField>
        <fullName>Request_Bypass_Approval_Reason__c</fullName>
        <label>Request Bypass Approval Reason</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>