force-app/main/default/objects/SBQQ__Quote__c/fields/RPA_Mapped_Region__c.field-meta.xml
<CustomField>
    <fullName>RPA_Mapped_Region__c</fullName>
    <label>RPA Mapped Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>