force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__BillingCity__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BillingCity__c</fullName>
        <description>City of the Bill To address for this quote.</description>
        <inlineHelpText>City of the Bill To address for this quote.</inlineHelpText>
        <label>Bill To City</label>
        <length>40</length>
        <type>Text</type>
    </CustomField>