force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__BillingCountry__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BillingCountry__c</fullName>
        <description>Country of the Bill To address for this quote.</description>
        <inlineHelpText>Country of the Bill To address for this quote.</inlineHelpText>
        <label>Bill To Country</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>