force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__BillingPostalCode__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BillingPostalCode__c</fullName>
        <description>Postal Code of the Bill To address for this quote.</description>
        <inlineHelpText>Postal Code of the Bill To address for this quote.</inlineHelpText>
        <label>Bill To Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </CustomField>