force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__BillingState__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BillingState__c</fullName>
        <description>State/Province of the Bill To address for this quote.</description>
        <inlineHelpText>State/Province of the Bill To address for this quote.</inlineHelpText>
        <label>Bill To State</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>