force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__Introduction__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Introduction__c</fullName>
        <description>Introduction that can be printed on the generated PDF document.</description>
        <inlineHelpText>Introduction that can be printed on the generated PDF document.</inlineHelpText>
        <label>Introduction</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </CustomField>