force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__LastCalculatedOn__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__LastCalculatedOn__c</fullName>
        <description>The date and time this quote was last calculated.</description>
        <inlineHelpText>The date and time this quote was last calculated.</inlineHelpText>
        <label>Last Calculated On</label>
        <type>DateTime</type>
    </CustomField>