force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__LastSavedOn__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__LastSavedOn__c</fullName>
        <description>The date and time this quote was last saved.</description>
        <inlineHelpText>The date and time this quote was last saved.</inlineHelpText>
        <label>Last Saved On</label>
        <type>DateTime</type>
    </CustomField>